<resources>
    <string name="app_name">RecipeRx</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="dashboard">Dashboard</string>
    <string name="food_for_fool">Food For Fool</string>
    <string name="new_dish">New Dish</string>
    <string name="name">Name</string>
    <string name="dish_type">Dish Type</string>
    <string name="category_dish">Category</string>
    <string name="ingredients_dish">Ingredients</string>
    <string name="cooking_time_minutes_dish">Cooking Time in Minutes</string>
    <string name="direction_to_cook_dish">Direction to Cook</string>
    <string name="add_new_dish">Add New Dish</string>
    <string name="add_this_dish">Add This Dish</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_action_image">Select Action Image</string>
    <string name="error_image_selected">You must select a message to continue</string>
    <string name="error_title_selected">Title must not be empty</string>
    <string name="error_type_selected">Type must not be empty</string>
    <string name="error_category_selected">Category must not be empty</string>
    <string name="error_ingredients_selected">Ingredients must not be empty</string>
    <string name="error_cooking_time_selected">You must select the time to cook this recipe</string>
    <string name="success_message">Success</string>
    <string name="success_editing_message">Success Editing</string>
    <string name="default_dish_error_message">Something went wrong</string>
    <string name="error_cooking_direction_selected">Please set the cooking directions to this recipe</string>
    <string name="title">Title</string>
    <string name="random_dish">Random Dish</string>
    <string name="favorites">Favorites</string>
    <string name="estimate_cooking_time">The approximate time required to cook the dish is %1$s minutes</string>
    <string name="msg_added_to_favorites">Added To Favorites</string>
    <string name="msg_removed_from_favorites">Removed From Favorites</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="msg_delete_dish">Delete Dish</string>
    <string name="msg_confirm_delete_dish_message">Are you sure that you want to delete this dish?</string>
    <string name="msg_delete_fav_dishes">Delete Favorites Dishes</string>
    <string name="msg_confirm_delete_message">Are you sure that you want to delete all your favorites recipes?</string>
    <string name="filter">Filter</string>
    <string name="title_select_item_to_filter">SELECT AN ITEM TO FILTER</string>
    <string name="msg_insert_on_main">Insert on your dihes</string>
    <string name="msg_insert_this_on_your">Insert this dish on your database?</string>
    <string name="share">Share</string>
    <string name="periodic_notification_work_msg">Food for fool Notification</string>
    <string name="notification_title">Check new foods</string>
    <string name="notification_subtitle">Tap for more details</string>

</resources>